--- a/src/article/poster.tex
+++ b/src/article/poster.tex
@@ -182,12 +182,11 @@ la masa de cada halo tenemos que
 
 \section{Discusión}
 
-Cupcake ipsum dolor. Sit amet carrot cake cheesecake I love jelly
-sugar plum. Liquorice candy gummi bears dessert icing cupcake. I love
-macaroon cotton candy biscuit. Pudding candy canes I love candy canes.
-Macaroon ice cream I love powder. Biscuit lemon drops sweet wafer
-carrot cake. Apple pie pastry danish ice cream sweet pastry gummies
-lemon drops. Cheesecake cheesecake marzipan.
+A diferencia del estimado de la concentración dada por \emph{BDM }este
+método permite obtener un estimado más directo. Sin embargo no se
+sabe a que se deben las discrepancias entre los resultados obtenidos,
+aun es necesario determinar si estas diferencias se deben al algorítmo
+utilizado en si o a la población de datos que se tomó.
 \begin{thebibliography}{1}
 \bibitem{NFW}The Structure of cold dark matter halos - Navarro, Julio
 F. et al. Astrophys.J. 462 (1996) 563-575 astro-ph/9508025
