--- a/paper/article.tex
+++ b/paper/article.tex
@@ -66,7 +66,8 @@
 
 \begin{document}
 
-\title[Bayesian halo concentration]{Measurement of dark matter halo concentrations using a bayesian approach}
+\title[Bayesian halo concentrations]{Measuring dark matter halo
+  concentrations with a bayesian approach}
 \author[Poveda \& Forero-Romero]{
 \parbox[t]{\textwidth}{\raggedright
   Christian Poveda$^{1}$ \&
