new references and updating procedure

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -13,6 +13,26 @@
 }
 
 
+@ARTICLE{More2011,
+   author = {{More}, S. and {Kravtsov}, A.~V. and {Dalal}, N. and {Gottl{\"o}ber}, S.
+	},
+    title = "{The Overdensity and Masses of the Friends-of-friends Halos and Universality of Halo Mass Function}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {1103.0005},
+ primaryClass = "astro-ph.CO",
+ keywords = {cosmology: theory, dark matter, methods: numerical},
+     year = 2011,
+    month = jul,
+   volume = 195,
+      eid = {4},
+    pages = {4},
+      doi = {10.1088/0067-0049/195/1/4},
+   adsurl = {http://adsabs.harvard.edu/abs/2011ApJS..195....4M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Wang2013,
    author = {{Wang}, Xin and {Szalay}, Alex and {Arag{\'o}n-Calvo}, {Miguel} A. and {Neyrinck}, Mark C. and {Eyink}, Gregory L.},
     title = "{Kinematic Morphology of Large-scale Structure: Evolution from Potential to Rotational Flow}",
