--- a/paper/article.tex
+++ b/paper/article.tex
@@ -111,9 +111,11 @@ between the two power law behaviour in the $\rho\propto r^{-1}$ for
 $r<r_s$ and $\rho\propto r^{-2}$ for  $r>r_s$.  
 
 We define the virial radius of a halo, $r_v$, as the boundary of the
-spherical volume that encloses an average density of $\Delta_v$ times
-the critical density of the Universe. The corresponding mass $M_{v}$
-can be thus expressed as $M_{v} = \frac{4\pi}{3}\rho_c\Delta_v r_v^3$. 
+spherical volume that encloses an average density of $\Delta_h$ times
+the average density of the Universe. The corresponding mass $M_{v}$,
+the virial mass, can be thus expressed as $M_{v} =
+\frac{4\pi}{3}\bar{\rho}\Delta_h r_v^3$. 
+
 
 
 The total mass enclosed within a radius $r$ can be computed to be:
@@ -141,7 +143,10 @@ A=\left[\ln\left(1+c\right)-\left(\frac{c}{c+1}\right)\right],
 \end{equation}
 
 meaning that the concentration is the only free parameter to
-determine the density profile of the halo.
+determine the density profile of the halo. In Figure
+\ref{fig:profiles} we show the family of normalized integrated mass
+profiles for different values of the concentration in the range
+$1\leq c \leq 20$. 
 
 
 \begin{figure}
@@ -169,7 +174,7 @@ potential. In the process of building the mass profile we discard the
 particle at the center.
 
 We stop the construction of the integrated mass profile once we arrive
-at an average density of $\Delta_h\rho_c$. This radius marks the
+at an average density of $\Delta_h\bar{\rho}$. This radius marks the
 virial radius and the virial mass. We divide the total mass enclosed
 mass $M_i$ and the radii $r_i$ by these values to obtaine the
 dimensionless variables $x_i$ and $m_i$. 
@@ -192,18 +197,38 @@ $\sigma_c$.
 
 
 \subsection{Mock Halos}
-Several halos with known values of $c$ were generated. These halos
-were then processed to determine the acurracy of this method. The
-number of particles and value of $c$ for each halo were generated
-randomly.  
+
+We generate $100$ mock halos with concentration values randomly
+placed in the range $1<c<10$. Each one of the halos is generated with
+four different total particle numbers: $20$, $200$, $2000$ and $20000$.
+
+The method we use to generate the halos is based on the integrated
+mass profile. {\bf Our algorithm works as follows...}
 
 \subsection{Simulation Data}
 \label{sec:data}
 
+We use data from the MultiDark cosmological volume. This simulation
+follows the non-linear evolution of a dark matter density field
+sampled with $2048^3$ particles over a cubic box of $1000$ \hMpc on a
+side. The data is publicly available, more details about the structure
+of the database and the simulations can be found in
+\citep{2013AN....334..691R}. 
 
+We select a sample of halos in a cubic sub-volumne of $XXX$ \hMpc on a
+side. We select first all the halos at $z=0$ detected with a
+Friends-of-Friends (FoF) algorithm with masses in the interval $10^{11}\leq
+M_{\rm FoF}/\hMsun \leq 10^{15}$. The FoF algorithm ran with a linking
+length of $0.17$ times the average interparticle distance. This choice
+translates into an overdensity $\Delta_h\sim 700$ that is dependent on
+the halo concentration \citep{More2011}. 
 
-\section{Results}
-\label{sec:results}
+For each selected halo with the previous procedure we select from the database
+all the particles that belong to it. From the particles we follow the
+procedure spelled out in Section \ref{sec:method} with $\Delta_h=740$
+(corresponding to $200$ times the critical density) to find the
+halo concentration. Finally, we store the values obtained for the
+virial radius, virial mass and concentration. 
 
 Finally we compare this results with the values obtaned by BDM, since
 the number of halos obtained by FOF and BDM is different, each BDM
@@ -211,6 +236,11 @@ halo gets related with the nearest halo in FOF. We compute two
 concentrations, one where the overdensity limit is $360\rho_{back}$
 (like in BDMV) an other where the overdensity limit is
 $740\rho_{back}$ (like in BDMW). 
+
+
+\section{Results}
+\label{sec:results}
+
 
 \subsection{Mock Halos}
 \begin{figure}[H]
