--- a/paper/article.tex
+++ b/paper/article.tex
@@ -215,13 +215,16 @@ side. The data is publicly available, more details about the structure
 of the database and the simulations can be found in
 \citep{2013AN....334..691R}. 
 
-We select a sample of halos in a cubic sub-volumne of $XXX$ \hMpc on a
-side. We select first all the halos at $z=0$ detected with a
-Friends-of-Friends (FoF) algorithm with masses in the interval $10^{11}\leq
-M_{\rm FoF}/\hMsun \leq 10^{15}$. The FoF algorithm ran with a linking
-length of $0.17$ times the average interparticle distance. This choice
-translates into an overdensity $\Delta_h\sim 700$ that is dependent on
-the halo concentration \citep{More2011}. 
+We select a sample of halos in a cubic sub-volumne of $100$ \hMpc on a
+side centered on the most massive halo in the simulation at
+$z=0$\footnote{This corresponds to the \texttt{miniMDR1} database in
+  the MultiDark webpage}. We select first all the halos at $z=0$
+detected with a Friends-of-Friends (FoF) algorithm with masses in the
+interval $10^{11}\leq M_{\rm FoF}/\hMsun \leq 10^{15}$. The FoF
+algorithm ran with a linking length of $0.17$ times the average
+interparticle distance. This choice translates into an overdensity
+$\Delta_h\sim 700$ that is dependent on the halo concentration
+\citep{More2011}.
 
 For each selected halo with the previous procedure we select from the database
 all the particles that belong to it. From the particles we follow the
