--- a/paper/article.tex
+++ b/paper/article.tex
@@ -223,7 +223,7 @@ detected with a Friends-of-Friends (FoF) algorithm with masses in the
 interval $10^{11}\leq M_{\rm FoF}/\hMsun \leq 10^{15}$. The FoF
 algorithm ran with a linking length of $0.17$ times the average
 interparticle distance. This choice translates into an overdensity
-$\Delta_h\sim 700$ that is dependent on the halo concentration
+$\Delta_h\sim 400-700$ that is dependent on the halo concentration
 \citep{More2011}.
 
 For each selected halo with the previous procedure we select from the database
@@ -246,13 +246,15 @@ $740\rho_{back}$ (like in BDMW).
 
 
 \subsection{Mock Halos}
+\label{sec:results_mocks}
 \begin{figure}[H]
 \caption{FIXME: Test results}
 \end{figure}
 
 
 
-\subsection{Simulation Dat}
+\subsection{Simulation Data}
+\label{sec:results_mocks}
 
 \section{Discussion}
 \label{sec:discussion}
@@ -261,9 +263,7 @@ $740\rho_{back}$ (like in BDMW).
 
 \subsection{Concentration as a function of halo mass}
 
-\subsection{Implication for comparison against observations}
-
-
+\subsection{Implication for comparisons against observations}
 
 
 \section{Conclusions}
